# prebid-server-deployment-on-aws

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE.txt  README.md  solution-manifest.yaml
source/: .coveragerc  pyproject.toml  pytest.ini  requirements-poetry.txt  requirements.txt
source/cdk_solution_helper_py/: README.md  requirements-dev.txt
source/cdk_solution_helper_py/helpers_cdk/: setup.py
source/cdk_solution_helper_py/helpers_common/: setup.py
source/infrastructure/: app.py  cdk.json  setup.py
source/infrastructure/prebid_server/: alb_access_logs_construct.py  alb_entry_deployment.py  app_registry_aspect.py  cloudfront_entry_deployment.py  cloudfront_waf_construct.py  cloudtrail_construct.py  cloudwatch_alarms_construct.py  cloudwatch_metrics_construct.py  condition_aspect.py  container_image_construct.py  docker_configs_construct.py  ecs_service_construct.py  ecs_task_construct.py  efs_construct.py  operational_metrics_construct.py  prebid_artifacts_constructs.py  prebid_datasync_constructs.py  prebid_glue_constructs.py  prebid_metrics_schema.json  prebid_server_stack.py  stack_constants.py  vpc_construct.py
source/loadtest/: README.md  app.py  bidding_server_simulator.py  cdk.json
source/loadtest/jmx/: .gitignore  README.md  prebid_server_test_plan.jmx  prebid_server_test_plan_using_amt_adapter.jmx
source/tests/: conftest.py  setup.py
source/tests/functional_tests/: README.md  conftest.py  requirements-test.txt  run-functional-tests.sh  test_bad_requests.py  test_metric_etl.py  test_prebid_auction.py  test_prebid_server_endpoints.py
(+102 files in other folders)
